Tests/Runtime2/Error/Chain/.build/handleerror.pr
[
  {
    "name": "HandleError",
    "description": "Build goal HandleError",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "set %errorHandled% = true",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "variable",
            "action": "set",
            "parameters": [
              {
                "name": "Name",
                "value": "%errorHandled%",
                "type": "string"
              },
              {
                "name": "Value",
                "value": true,
                "type": "bool"
              },
              {
                "name": "Type",
                "value": "bool",
                "type": "string"
              },
              {
                "name": "AsDefault",
                "value": false,
                "type": "bool"
              }
            ],
            "return": [],
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/HandleError.goal",
    "prPath": "/.build/handleerror.pr",
    "hash": "e591f83f4025046dd0efc4f1ff631ccb5f0a4c4d3ead32f1fa6d49332e46c1ee",
    "builderVersion": "0.2.2",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]